# ultra-planning

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ARCHITECTURE.md  EXECUTION_GUIDE.md
examples/sample-bundle/: README.md  bundle.json
src/ultra_plan/: _io.py  _logging.py  _retry.py  _timeout.py  agent_setup.py  cli.py  executor.py  orchestrator.py  validate.py
src/ultra_plan/agents/: _env.py  _errors.py  _extract.py  claude.py  opencode.py
src/ultra_plan/prompts/: __init__.py  system.md
src/ultra_plan/prompts/sources/: anthropic.md  github.md  mcp.md  web.md
src/ultra_plan/review/: _ratelimit.py  server.py
src/ultra_plan/review/static/: app.js  index.html  style.css
src/ultra_plan/schema/: bundle.schema.json  permissions.schema.json  skills.schema.json  tools.schema.json
tests/: conftest.py  fixtures.py  test_agent_setup.py  test_claude_agent.py  test_cli_args.py  test_cwd_guard.py  test_env_scrub.py  test_error_messages_demo.py  test_errors.py  test_execute_integration.py  test_executor.py  test_io.py  test_logging.py  test_orchestrator.py  test_preflight_permissions.py  test_preflight_settings.py  test_prompt_render.py  test_retry.py  test_review_fixes.py  test_schema.py  test_server_security.py  test_signals.py  test_timeouts.py  test_version.py
