[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra-plan"
version = "0.1.0"
description = "Ultra planning: web-sourced skills/tools/permissions bundle for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "jsonschema>=4.18",
    "referencing>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
ultra-plan = "ultra_plan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ultra_plan" = [
    "prompts/*.md",
    "prompts/sources/*.md",
    "schema/*.json",
    "review/static/*",
]
